Mon Jan  3 14:08:42 2000  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm:
	Allowed for new current conditions format; Changed minor text output

Tue Apr  6 14:03:18 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm:
	A Moore Reported value not added to the forecast item if there was a "..." - fixed.

Thu Apr  1 22:21:03 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm: Inside get_city_zone() we're no longer looking for
	  the state's first letters then a Z, now just \012\w\wZ
	  this seems to work.  Good ol' regex's

Wed Mar 17 14:14:53 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm: Skip .< temp data

Fri Feb 26 16:41:48 1999  msolomon  <msolomon@fido.seva.net>

	* t.pl, WeatherNOAA.pm:
	Thanks to Timothy Kimball <kimball@stsci.edu>, fixed bug in Relitive
	Humidity where 100% would be reparted as 00%

	* WeatherNOAA.pm, t.pl: Per Pat Ludwig, fixed the proxy bug

Mon Feb 22 15:01:00 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm:
	Per pudge@pobox.com from cpan-testers@perl.org, changed splitting on
	"\n"'s to "\012"'s for the MacOS folks

Fri Feb 19 21:20:47 1999  msolomon  <msolomon@fido.seva.net>

	* dist/icons.tar: Added

Thu Feb 18 20:12:21 1999  msolomon  <msolomon@fido.seva.net>

	* examples/wx.cgi, examples/hash.pl, examples/simple2.pl:
	Changed WeahterNOAA to Geo::WeatherNOAA

Wed Feb 17 17:39:44 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm: Added return of Coverage area in process_city_zone()
	Added coverage table row to make_noaa_table()
	Added doc about opt_v

	* README: Added Geo::

Tue Feb 16 05:27:48 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm:
	Inside get_city_zone(), when looking for correct data section, also
	look for four digits which is the year which is always in the date line of
	the section.  Without this date, we'll consider the forecast invalid.  Any help?

Thu Feb 11 19:26:02 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm, Makefile.PL, README: